morning warmup fixed issues for order pizza

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -44,12 +44,18 @@ console.log(hello("David"));
      function f(x, y, z) {
          return x + " " + y + " " + z;
      }
-     console.log(f(["bat", "elephant"], [1 , 2], [5, 6]))
+     console.log(f(["bat", "elephant"], [1 , 2], [5, 6]));
 
     function uppercase(x) {
         return x.toUpperCase();
     }
     console.log(uppercase("a"));
+
+    function areaOfCircle(x) {
+    var r = x / 2;
+    return Math.pi * (r * r);
+    }
+    console.log(areaOfCircle(10));
 
 </script>
 
