changes to grid

--- a/grid-system.html
+++ b/grid-system.html
@@ -99,9 +99,9 @@
                         </ul>
                     </div>
                 </div>
-                <!--MEDIA ITEMS #1 and #2 for med to xtra lg screens-->
+                <!--Media 1 and 2 for med to xtra lg screens-->
                 <ul class="media-list col-md-4 hidden-xs hidden-sm">
-                    <!--List item #1-->
+                    <!--List item 1-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
@@ -113,7 +113,7 @@
                         </div>
                     </li>
 
-                    <!--List item #2-->
+                    <!--List item 2-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
@@ -124,7 +124,7 @@
                             <h4 class="media-heading">NIBBLER AWESOME WEBSITE TESTING</h4>
                         </div>
                     </li>
-                    <!--MEDIA ITEM #3-->
+                    <!--Media item 3-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
