morning warm up

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -57,6 +57,11 @@ console.log(hello("David"));
     }
     console.log(areaOfCircle(10));
 
+    function p(x, y, z, a) {
+    return x + y + z + a;
+    }
+    console.log(p(3, 2, 5, 7));
+
 </script>
 
 </body>
