--- a/grid-system.html
+++ b/grid-system.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<!-- navbar -->
 <div class="container">
     <header>
         <div class="row">
@@ -42,6 +43,8 @@
             </div>
         </div>
     </header>
+    <!-- nav bar -->
+    <!-- DOTS -->
     <main>
         <div class="container">
             <div class="row">
@@ -59,7 +62,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Picture 1 -->
         <hr>
         <div class="container">
             <div class="row">
@@ -68,7 +71,7 @@
             </div>
             <div class="row margin-imgs media-float">
                 <div class="col-xs-offset-1 col-xs-10 col-sm-6 first-img col-md-4">
-                    <img class="img-thumbnail img-responsive img-left" src="img/ipad.jpg" alt="ipad">
+                    <img class="img-thumbnail img-responsive img-left" src="img/apple-ipad.jpg" alt="ipad">
                     <div class="row img-subtitle">
                         <div class="col-xs-6">
                             <p class="featuredproj">FEATURED PROJECT</p>
@@ -142,7 +145,7 @@
             <div class="row margin-imgs">
                 <div class="col-sm-6 col-md-4">
                     <!--PICTURE 3-->
-                    <img class="hidden-xs img-thumbnail img-responsive img-left" src="img/man.jpg" alt="man">
+                    <img class="man hidden-xs img-thumbnail img-responsive img-left" src="img/man.jpg" alt="man">
                     <!--ROW 12: picture subtitle 3-->
                     <div class="row img-subtitle hidden-xs">
                         <div class="col-xs-6">
