cleaned up code

--- a/form.html
+++ b/form.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Register With Us!</title>
-    </head>
-    <body>
-        <h1>Register With Us!</h1>
-        <form method="POST" action="https://www.elformo.com/forms/973e5238-ba31-47e8-9fa6-a5ccbd5c0277">
-            <label for="email">Email:</label>
-            <input id="email" type="text" name="email" placeholder="Enter your email address">
-            <br>
-            <label for="password">Password:</label>
-            <input id="password" type="password" name="password" placeholder="Enter your password">
-            <br>
-            <br>
-            <label for="Bio">Bio:</label>
-            <br>
-            <textarea id="Bio" name="comment"  cols="100" rows="15" placeholder="Please tell us a little about yourself."></textarea>
-            <br>
-            <h3>How did you hear about us?</h3>
-            <input id="bb" type="checkbox" name="how" value="a" checked>
-            <label for="bb">Billboard</label>
-            <input id="rr" type="checkbox" name="how" value="b">
-            <label for="rr">Radio Advertisement</label>
-            <input id="ia" type="checkbox" name="how" value="c">
-            <label for="ia">Internet Advertisement</label>
-            <input id="other" type="checkbox" name="how" value="d">
-            <label for="other">Other</label>
-            <br>
-            <h3>What web browser are you using?</h3>
-            <label>
-                <select name="browser">
-                    <option value="google">Chrome</option>
-                    <option value="ios">Safari</option>
-                    <option value="fox">Fire Fox</option>
-                    <option value="ie">Internet Explorer</option>
-                    <option value="other">Other</option>
-                </select>
-            </label>
-            <br>
-            <br>
-            <input type="submit">
+<head>
+    <meta charset="UTF-8">
+    <title>Register With Us!</title>
+</head>
+<body>
+<h1>Register With Us!</h1>
+<form method="POST" action="https://www.elformo.com/forms/973e5238-ba31-47e8-9fa6-a5ccbd5c0277">
+    <label for="email">Email:</label>
+    <input id="email" type="text" name="email" placeholder="Enter your email address">
+    <br>
+    <label for="password">Password:</label>
+    <input id="password" type="password" name="password" placeholder="Enter your password">
+    <br>
+    <br>
+    <label for="Bio">Bio:</label>
+    <br>
+    <textarea id="Bio" name="comment" cols="100" rows="15"
+              placeholder="Please tell us a little about yourself."></textarea>
+    <br>
+    <h3>How did you hear about us?</h3>
+    <input id="bb" type="checkbox" name="how" value="a" checked>
+    <label for="bb">Billboard</label>
+    <input id="rr" type="checkbox" name="how" value="b">
+    <label for="rr">Radio Advertisement</label>
+    <input id="ia" type="checkbox" name="how" value="c">
+    <label for="ia">Internet Advertisement</label>
+    <input id="other" type="checkbox" name="how" value="d">
+    <label for="other">Other</label>
+    <br>
+    <h3>What web browser are you using?</h3>
+    <label>
+        <select name="browser">
+            <option value="google">Chrome</option>
+            <option value="ios">Safari</option>
+            <option value="fox">Fire Fox</option>
+            <option value="ie">Internet Explorer</option>
+            <option value="other">Other</option>
+        </select>
+    </label>
+    <br>
+    <br>
+    <input type="submit">
 
 
-        </form>
+</form>
 
 
-    </body>
+</body>
 </html>
