--- a/welcome.html
+++ b/welcome.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 id ="top">Welcome to Veridian Dynamics!</h1>
+<h1 id="top">Welcome to Veridian Dynamics!</h1>
 <P>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</P>
 <hr>
 <H1>Core Values</H1>
-<ul id ="values">
+<ul id="values">
     <li>Competence</li>
     <li>Involvment</li>
     <li>Technology</li>
@@ -65,7 +65,9 @@
 </table>
 <p><em>All products come with our quality guarantee!</em></p>
 </body>
-<a href="Register.html" target="_blank"><button id="nb">Register for our Newsletter!</button></a>
+<a href="Register.html" target="_blank">
+    <button id="nb">Register for our Newsletter!</button>
+</a>
 <br>
 <br>
 <footer>
