--- a/order-pizza.html
+++ b/order-pizza.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/custom.css">
 
@@ -12,13 +14,20 @@
 </head>
 <body>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Pizza World</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
@@ -42,172 +51,172 @@
 
 <div class="container-fluid d-none d-lg-block">
     <div class="jumbotron jumbotron-fluid">
-            <h1 class="display-4">Welcome to Pizza World!</h1>
+        <h1 class="display-4">Welcome to Pizza World!</h1>
     </div>
     <h2>Build your own pizza!</h2>
 </div>
-    <br>
-    <hr>
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" href="#crust"><span class="badge badge-secondary">1</span>Size and crust</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#cheese1"><span class="badge badge-secondary">2</span>Cheese and sauce</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#toppings"><span class="badge badge-secondary">3</span>Toppings</a>
-        </li>
-    </ul>
-    <div class="card" id="crust">
-        <h5 class="card-header">Choose size and crust</h5>
-        <div class="card-body">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Hand Tossed</div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
-                </ul>
+<br>
+<hr>
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link active" href="#crust"><span class="badge badge-secondary">1</span>Size and crust</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#cheese1"><span class="badge badge-secondary">2</span>Cheese and sauce</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#toppings"><span class="badge badge-secondary">3</span>Toppings</a>
+    </li>
+</ul>
+<div class="card" id="crust">
+    <h5 class="card-header">Choose size and crust</h5>
+    <div class="card-body">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Hand Tossed</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
+            </ul>
+            <li class="list-group-item">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="SizeAndCrust" id="Small" value="Small">
+                    <label class="form-check-label" for="Small">
+                        Small (10")
+                    </label>
+                </div>
+            </li>
+            <li class="list-group-item">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="SizeAndCrust" id="Medium" value="Medium">
+                    <label class="form-check-label" for="Medium">
+                        Medium (12")
+                    </label>
+                </div>
+            </li>
+        </div>
+        <br>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Crispy Thin</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.</li>
                 <li class="list-group-item">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="SizeAndCrust" id="Small" value="Small">
-                        <label class="form-check-label" for="Small">
+                        <input class="form-input" type="radio" name="Crust" id="Smallcr" value="Smallcr">
+                        <label class="form-label" for="Smallcr">
                             Small (10")
                         </label>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="SizeAndCrust" id="Medium" value="Medium">
-                        <label class="form-check-label" for="Medium">
+                        <input class="form-input" type="radio" name="Crust" id="Mediumcr" value="Mediumcr">
+                        <label class="form-label" for="Mediumcr">
                             Medium (12")
                         </label>
                     </div>
                 </li>
+            </ul>
+        </div>
+        <hr>
+        <a href="#cheese1" class="btn btn-primary">Next step</a>
+    </div>
+</div>
+
+<div class="card" id="cheese1">
+    <h5 class="card-header">Choose cheese and sauce</h5>
+    <div class="card-body">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Cheese
             </div>
-            <br>
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Crispy Thin</div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.</li>
-                    <li class="list-group-item">
-                        <div class="form-check">
-                            <input class="form-input" type="radio" name="Crust" id="Smallcr" value="Smallcr">
-                            <label class="form-label" for="Smallcr">
-                                Small (10")
-                            </label>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="form-check">
-                            <input class="form-input" type="radio" name="Crust" id="Mediumcr" value="Mediumcr">
-                            <label class="form-label" for="Mediumcr">
-                                Medium (12")
-                            </label>
-                        </div>
-                    </li>
-                </ul>
+            <div class="form-group">
+                <label for="cheese">How much?</label>
+                <select class="form-control" id="cheese">
+                    <option>Light</option>
+                    <option>Normal</option>
+                    <option>Extra</option>
+                    <option>Double</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Sauce
+            </div>
+            <div class="form-group">
+                <label for="sauce-type">What type?</label>
+                <select class="form-control" id="sauce-type">
+                    <option>Tomato Sauce</option>
+                    <option>Marinara Sauce</option>
+                    <option>BBQ Sauce</option>
+                    <option>Alfredo Sauce</option>
+                </select>
             </div>
             <hr>
-            <a href="#cheese1" class="btn btn-primary">Next step</a>
-        </div>
-    </div>
-
-    <div class="card" id="cheese1">
-        <h5 class="card-header">Choose cheese and sauce</h5>
-        <div class="card-body">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Cheese
-                </div>
-                <div class="form-group">
-                    <label for="cheese">How much?</label>
-                    <select class="form-control" id="cheese">
-                        <option>Light</option>
-                        <option>Normal</option>
-                        <option>Extra</option>
-                        <option>Double</option>
-                    </select>
-                </div>
+            <div class="form-group">
+                <label for="sauce-much">How much?</label>
+                <select class="form-control" id="sauce-much">
+                    <option>Light</option>
+                    <option>Normal</option>
+                    <option>Extra</option>
+                </select>
             </div>
         </div>
-        <div class="card-body">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Sauce
-                </div>
-                <div class="form-group">
-                    <label for="sauce-type">What type?</label>
-                    <select class="form-control" id="sauce-type">
-                        <option>Tomato Sauce</option>
-                        <option>Marinara Sauce</option>
-                        <option>BBQ Sauce</option>
-                        <option>Alfredo Sauce</option>
-                    </select>
-                </div>
-                <hr>
-                <div class="form-group">
-                    <label for="sauce-much">How much?</label>
-                    <select class="form-control" id="sauce-much">
-                        <option>Light</option>
-                        <option>Normal</option>
-                        <option>Extra</option>
-                    </select>
-                </div>
-            </div>
-            <div class="card-footer text-right">
-                <div class="btn-group" role="group" aria-label="Prev-Next-Step">
-                    <a href="#crust" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Previous Step</a>
-                    <a href="#toppings" class="btn btn-primary">Next Step <i class="fa fa-chevron-right"></i></a>
-                </div>
+        <div class="card-footer text-right">
+            <div class="btn-group" role="group" aria-label="Prev-Next-Step">
+                <a href="#crust" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Previous Step</a>
+                <a href="#toppings" class="btn btn-primary">Next Step <i class="fa fa-chevron-right"></i></a>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="card" id="toppings">
-        <h5 class="card-header">Choose toppings</h5>
-        <div class="card-body">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Choose Meats
-                </div>
-                <label for="Beef">
-                    <input type="checkbox" name="Beef" id="Beef"> Beef
-                </label>
-                <hr>
-                <label for="Ham">
-                    <input type="checkbox" name="Ham" id="Ham"> Ham
-                </label>
-                <hr>
-                <label for="Philly Steak">
-                    <input type="checkbox" name="Philly Steak" id="Philly Steak"> Philly Steak
-                </label>
-                <hr>
-                <label for="Bacon">
-                    <input type="checkbox" name="Bacon" id="Bacon"> Bacon
-                </label>
+<div class="card" id="toppings">
+    <h5 class="card-header">Choose toppings</h5>
+    <div class="card-body">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Choose Meats
             </div>
-        </div>
-        <div class="card-body">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">Choose Non-Meats
-                </div>
-                <label for="Green Peppers">
-                    <input type="checkbox" name="Green Peppers" id="Green Peppers"> Green Peppers
-                </label>
-                <hr>
-                <label for="Mushrooms">
-                    <input type="checkbox" name="Mushrooms" id="Mushrooms"> Mushrooms
-                </label>
-                <hr>
-                <label for="Onions">
-                    <input type="checkbox" name="Onions" id="Onions"> Onions
-                </label>
-                <hr>
-                <label for="Jalepeno Peppers">
-                    <input type="checkbox" name="Jalepeno Peppers" id="Jalepeno Peppers"> Jalepeno Peppers
-                </label>
-            </div>
+            <label for="Beef">
+                <input type="checkbox" name="Beef" id="Beef"> Beef
+            </label>
             <hr>
-            <a href="#" class="btn btn-primary">Checkout<i class="fas fa-shopping-cart"></i></a>
+            <label for="Ham">
+                <input type="checkbox" name="Ham" id="Ham"> Ham
+            </label>
+            <hr>
+            <label for="Philly Steak">
+                <input type="checkbox" name="Philly Steak" id="Philly Steak"> Philly Steak
+            </label>
+            <hr>
+            <label for="Bacon">
+                <input type="checkbox" name="Bacon" id="Bacon"> Bacon
+            </label>
         </div>
     </div>
+    <div class="card-body">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">Choose Non-Meats
+            </div>
+            <label for="Green Peppers">
+                <input type="checkbox" name="Green Peppers" id="Green Peppers"> Green Peppers
+            </label>
+            <hr>
+            <label for="Mushrooms">
+                <input type="checkbox" name="Mushrooms" id="Mushrooms"> Mushrooms
+            </label>
+            <hr>
+            <label for="Onions">
+                <input type="checkbox" name="Onions" id="Onions"> Onions
+            </label>
+            <hr>
+            <label for="Jalepeno Peppers">
+                <input type="checkbox" name="Jalepeno Peppers" id="Jalepeno Peppers"> Jalepeno Peppers
+            </label>
+        </div>
+        <hr>
+        <a href="#" class="btn btn-primary">Checkout<i class="fas fa-shopping-cart"></i></a>
+    </div>
+</div>
 </div>
 </body>
 </html>
