--- a/grid-system.html
+++ b/grid-system.html
@@ -1,11 +1,10 @@
+
 <!DOCTYPE html>
 
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <title>Codeup Design</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/grid-system.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,15 +16,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<!-- navbar -->
 <div class="container">
     <header>
+        <!--ROW 1: logo-->
         <div class="row">
         </div>
+        <!--ROW 2: page title-->
         <div class="row">
             <div class="page-header">
                 <div class="header">
-                    <img class="img-responsive center-block" id="logo" src="img/logo.jpg" alt="logo">
+                    <img class="img-responsive center-block" id="logo" src="img/assets/logo.jpg" alt="logo">
                 </div>
                 <p class="text-center" id="page-title">codeup design</p>
                 <div>
@@ -36,17 +36,19 @@
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </div>
+                <!--ROW 4: description-->
                 <div>
                     <h1 class="text-center">VISUAL DESIGN &amp; WEB DEVELOPMENT</h1>
                 </div>
+                <!--ROW 5: subtitle-->
                 <div>
                     <h3 class="text-center">FROM PARK CITY, UTAH</h3>
                 </div>
             </div>
         </div>
+        <!--ROW 3: nav bar-->
     </header>
-    <!-- nav bar -->
-    <!-- DOTS -->
+    <!--ROW 6: icons-->
     <main>
         <div class="container">
             <div class="row">
@@ -64,16 +66,20 @@
                 </div>
             </div>
         </div>
-        <!-- Picture 1 -->
+
         <hr>
+        <!--ROW 7: selected work-->
         <div class="container">
             <div class="row">
                 <p class="col-md-8" id="selected">SELECTED WORK</p>
                 <p class="col-md-4 hidden-xs hidden-sm" id="last">THE LAST</p>
             </div>
+            <!--ROW 8: first row of pictures-->
             <div class="row margin-imgs media-float">
                 <div class="col-xs-offset-1 col-xs-10 col-sm-6 first-img col-md-4">
-                    <img class="img-thumbnail img-responsive img-left" src="img/apple-ipad.jpg" alt="ipad">
+                    <!--PICTURE 1-->
+                    <img class="img-thumbnail img-responsive img-left" src="img/assets/images/apple-ipad.jpg" alt="ipad">
+                    <!--ROW 9: picture subtitle 1-->
                     <div class="row img-subtitle">
                         <div class="col-xs-6">
                             <p class="featuredproj">FEATURED PROJECT</p>
@@ -90,7 +96,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <!--PICTURE 2-->
-                    <img class="hidden-xs img-thumbnail img-responsive" src="img/macbook.jpg" alt="macbook">
+                    <img class="hidden-xs img-thumbnail img-responsive" src="img/assets/images/macbook.jpg" alt="macbook">
                     <!--ROW 10: picture subtitle 2-->
                     <div class="row img-subtitle hidden-xs">
                         <div class="col-xs-6">
@@ -104,13 +110,13 @@
                         </ul>
                     </div>
                 </div>
-                <!--Media 1 and 2 for med to xtra lg screens-->
+                <!--MEDIA ITEMS #1 and #2 for med to xtra lg screens-->
                 <ul class="media-list col-md-4 hidden-xs hidden-sm">
-                    <!--List item 1-->
+                    <!--List item #1-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object" src="img/mobile-phone.jpg" alt="iphone">
+                                <img class="media-object" src="img/assets/images/mobile-phone.jpg" alt="iphone">
                             </a>
                         </div>
                         <div class="media-body">
@@ -118,22 +124,22 @@
                         </div>
                     </li>
 
-                    <!--List item 2-->
+                    <!--List item #2-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object" src="img/head.jpg" alt="head">
+                                <img class="media-object" src="img/assets/images/head.jpg" alt="head">
                             </a>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">NIBBLER AWESOME WEBSITE TESTING</h4>
                         </div>
                     </li>
-                    <!--Media item 3-->
+                    <!--MEDIA ITEM #3-->
                     <li class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object" src="img/ipad.jpg" alt="ipad">
+                                <img class="media-object" src="img/assets/images/ipad.jpg" alt="ipad">
                             </a>
                         </div>
                         <div class="media-body">
@@ -147,7 +153,7 @@
             <div class="row margin-imgs">
                 <div class="col-sm-6 col-md-4">
                     <!--PICTURE 3-->
-                    <img class="man hidden-xs img-thumbnail img-responsive img-left" src="img/man.jpg" alt="man">
+                    <img class="hidden-xs img-thumbnail img-responsive img-left" src="img/assets/images/man.jpg" alt="man">
                     <!--ROW 12: picture subtitle 3-->
                     <div class="row img-subtitle hidden-xs">
                         <div class="col-xs-6">
@@ -180,26 +186,16 @@
                 <div class="hidden-xs hidden-sm">
                     <h5><i class="fa fa-twitter" style="font-size:36px; color:deepskyblue;"></i>Last Tweet</h5>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi distinctio,
-                        doloremque explicabo laudantium magnam necessitatibus officia! Accusantium amet aut dicta
-                        excepturi fuga iure numquam officia quas recusandae voluptatem? Enim.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi distinctio, doloremque explicabo laudantium magnam necessitatibus officia! Accusantium amet aut dicta excepturi fuga iure numquam officia quas recusandae voluptatem? Enim.
                     </p>
                 </div>
             </div>
         </div>
-    </main>
-</div>
+    </main></div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-</body>
-</html>
+</body></html>
