--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -76,6 +76,12 @@
         return typeof(x);
     }
 
+    function positiveEven(x) {
+        return x % 2 === 0 && x > 0;
+    }
+console.log(positiveEven(32));
+
+
 </script>
 
 </body>
