--- a/personal-site.html
+++ b/personal-site.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/personal-site.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark border border-success">
-    <a class="navbar-brand" href="#">Welcome</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border border-success py-0 px-0">
+    <a class="navbar-brand text-success mr-0 px-3 py-3" href="#">Welcome</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,10 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-success px-3 py-3" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item my-2 my-lg-0">
-                <a class="nav-link" href="#">Resume</a>
+                <a class="nav-link text-success px-3 py-3" href="#">Resume</a>
             </li>
         </ul>
     </div>
