--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,7 +24,10 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
-
+<button id="btn1">Click Me!</button>
+<button id="btn2">Click Me!</button>
+<button id="btn3">Click Me!</button>
+<button id="btn4">Click Me!</button>
 <script>
     (function() {
         "use strict";
@@ -34,7 +37,11 @@
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
 
-        mainHeader.innerHTML = "JavScript is Cool";
+
+        var listener = function (event) {
+            return mainHeader.innerHTML = "JavaScript is Cool";
+        };
+        document.getElementById('btn1').addEventListener('click', listener, false);
 
         // TODO: Uncomment the next line and get the sub header element by id
 
@@ -42,7 +49,11 @@
 
         // TODO: Set the text color of subHeader to blue
 
-        subHeader.style.color = "blue";
+        var listen = function (event) {
+            return subHeader.style.color = "blue";
+        };
+        document.getElementById('btn2').addEventListener('click', listen, false);
+
 
         // TODO: Uncomment the next line and get all list items
 
@@ -50,15 +61,13 @@
 
 
         // TODO: Set text color on every other list item to grey
-
-        listItems[1].style.color = "grey";
-        listItems[3].style.color = "grey";
-
-
         // TODO: Set text color of li with dbid = 1 to blue
 
-        var blue = document.getElementsByTagName("li");
-        blue[0].style.color = "blue";
+        var list;
+        list = function (event) {
+            return listItems[1].style.color = "grey", listItems[3].style.color = "grey", listItems[0].style.color = "blue";
+        };
+        document.getElementById('btn3').addEventListener('click', list, false);
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
 
@@ -66,7 +75,10 @@
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
 
-        subParagraphs[0].innerText = "Mission Accomplished!";
+        var lis = function (event) {
+            return subParagraphs[0].innerText = "Mission Accomplished!";
+        };
+        document.getElementById('btn4').addEventListener('click', lis, false);
 
     })();
 </script>
