cleaned up code for buttons

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,10 +24,11 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<button id="btn1">Click Me!</button>
-<button id="btn2">Click Me!</button>
-<button id="btn3">Click Me!</button>
-<button id="btn4">Click Me!</button>
+<button id="btn1">JavaScript is Cool!</button>
+<button id="btn2">Hello Again in blue!</button>
+<button id="btn3">Change item colors!</button>
+<button id="btn4">Change the paragraph!</button>
+
 <script>
     (function() {
         "use strict";
@@ -37,11 +38,11 @@
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
 
-
         var listener = function (event) {
             return mainHeader.innerHTML = "JavaScript is Cool";
         };
-        document.getElementById('btn1').addEventListener('click', listener, false);
+         document.getElementById('btn1').addEventListener('click', listener, false);
+
 
         // TODO: Uncomment the next line and get the sub header element by id
 
