--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -27,6 +27,24 @@ $(document).ready(function () {
     $('h1, p, li').css('background-color','yellow');
    var contents = $('h1').html();
    alert(contents);
+
+    $('li').hover(
+        function() {
+            $(this).css('color', 'red');
+        },
+        function() {
+            $(this).css('color', 'black');
+        }
+    );
+    $('h1').click(function() {
+        $(this).css('background-color', 'green');
+    });
+    $('h1').dblclick(function(e) {
+        $(this).css('background-color', 'yellow');
+    });
+    $('p').dblclick(function (e) {
+        $(this).css('font-size', '18px');
+    })
 });
 </script>
 </body>
