added reversing the jquery mouse actions

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -45,6 +45,9 @@ $(document).ready(function () {
     $('p').dblclick(function (e) {
         $(this).css('font-size', '18px');
     })
+    $('p').click(function () {
+        $(this).css('font-size', "14px");
+    })
 });
 </script>
 </body>
