--- a/konami.html
+++ b/konami.html
@@ -18,11 +18,12 @@
         39: 'right',
         40: 'down',
         65: 'a',
-        66: 'b'
+        66: 'b',
+        13: 'enter'
     };
 
     // the 'official' Konami Code sequence
-    var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+    var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a', 'enter'];
 
     // a variable to remember the 'position' the user has reached so far.
     var konamiCodePosition = 0;
@@ -35,13 +36,13 @@
         var requiredKey = konamiCode[konamiCodePosition];
 
         // compare the key with the required key
-        if (key == requiredKey) {
+        if (key === requiredKey) {
 
             // move to the next key in the konami code sequence
             konamiCodePosition++;
 
             // if the last key is reached, activate cheats
-            if (konamiCodePosition == konamiCode.length) {
+            if (konamiCodePosition === konamiCode.length) {
                 activateCheats();
                 konamiCodePosition = 0;
             }
@@ -56,6 +57,7 @@
         $('h1').css({'background-image':'url("img/KONAMI.jpeg")','height':'200px', "opacity":'.7', 'background-repeat':"no-repeat", 'background-size':'cover', 'margin':'0'});
         $('body').css({'background-image': 'url("img/konami-logo.0.0.jpg")', 'background-repeat':"no-repeat", 'background-size':'cover', 'color':'yellow'});
     };
+
     $(document).keyup(function(event){
         console.log(event.keyCode);
     });
